
Enhancements
 * Improved handling of an empty conf/pf.conf configuration file
 * Improved error reporting for dynamic uplink detection on Cisco
 * interface gateways are no longer required in configuration (#1447)
 * general.caching parameter removed from configuration
 * major refactoring, cleanup and dependencies removal
 * node.expire now works for VLAN/Inline mode (#1481)

--------------------------------------------------------------------------------
Version <stable-version> released on <releaseDate>

New Hardware
 * Adding support for Cisco Catalyst 3560G

New Features 
 * Remediation module for SourceFire 3D (addons/sourcefire)

Enhancements
 * Closing expired violations using the release_date (#1476)
 * Excluding the local switch when building the NAS SQL table (#1491)

Bug Fixes
 * Wrong information sent by mail for sponsored registration (#1445)

--------------------------------------------------------------------------------
Version 3.4.1 released on 2012-06-18

Bug Fixes
 * Regression in interface, network, floating-device and violation management Admin and CLI (#1468)
 * Load-balancer support: Apache Access List are now updated to allow them to reach the portal
 * Debian: missing dependency preventing Apache (captive portal, webadmin) to start

Translations
 * Updated Brazilian Portuguese (pt_BR) translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.4.0 released on 2012-06-13

Security
 * Fixed a reflected cross-site scripting (XSS) vulnerability in Web Admin guest management (#1454)

New Hardware
 * H3C S5120 series supports MAC-Authentication and 802.1X with or without VoIP
 * Added Role support for all Cisco Wireless (WLC) models
 * Brocade 6400 series supports MAC-Authentication and 802.1X with or without VoIP
 * Brocade RF Switches support (Wireless controller)
 * Netgear GS110 series support (SNMP Link up/down)

New Features